<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/laranja_claro"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/receitas"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_da_receita" />

    <EditText
        android:id="@+id/edtIngredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredientes" />

    <Button
        android:layout_gravity="center"
        android:backgroundTint="@color/laranja_escuro"
        android:id="@+id/btnEscolherImagem"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/escolher_imagem" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="200dp"
        android:layout_marginBottom="20sp"
        android:scaleType="centerCrop" />

    <Button
        android:backgroundTint="@color/laranja_escuro"
        android:id="@+id/btnSalvar"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/salvar_receita" />

    <TextView
        android:text="@string/lista_de_receitas"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/listReceitas"
        android:background="@drawable/fundo_arredondado_list"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</LinearLayout>