<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja_claro">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/laranja_claro"
        tools:context=".ReceitaActivity">

        <TextView

            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/receita"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/white"
            android:textAlignment="center"
            android:id="@+id/txtTitulo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/imgReceita"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_marginBottom="20dp"
            android:layout_height="200dp"
            android:background="@drawable/fundo_arredondado"
            android:scaleType="centerCrop" />

        <TextView

            android:id="@+id/txtIngredientes"
            android:textSize="24sp"
            android:textColor="@color/laranja_escuro"
            android:textAlignment="center"
            android:layout_width="350dp"
            android:background="@drawable/fundo_arredondado"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:backgroundTint="@color/laranja_escuro"
                android:id="@+id/btnVoltar"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:layout_marginTop="16dp"

                android:layout_gravity="center_horizontal"
                />

            <Button
                android:backgroundTint="@color/laranja_escuro"
                android:id="@+id/btnDelete"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
